# markql

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  install_markql.sh  install_python.sh  markqli.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  setup.cfg  setup.py  start-agent.sh  test.sh  test_python.sh  vcpkg.json
.github/workflows/: maintainability.yml  python-wheels.yml  release-binaries.yml
bench/: README.md  run.py
bench/baselines/: bs4_extract.py  lxml_extract.py
bench/gold/: hockey_big.csv  hockey_medium.csv  hockey_small.csv
bench/queries/: hockey_table_quality_cte.sql  hockey_table_to_csv.sql  hockey_table_to_csv_cte.sql  hockey_table_to_table.sql
browser_plugin/agent/: CMakeLists.txt
browser_plugin/agent/src/: main.cpp  sha256.cpp  sha256.h
browser_plugin/extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
browser_plugin/tests/: README.md  helpers.js  popup.spec.js
cli/: cli_args.cpp  cli_args.h  cli_utils.cpp  cli_utils.h  cli_utils_json.cpp  main.cpp  script_runner.cpp  script_runner.h
cli/explore/: dom_explorer.cpp  dom_explorer.h  dom_explorer_internal.h  dom_explorer_run.cpp  dom_explorer_view.cpp  inner_html_search.cpp  inner_html_search.h  markql_suggestor.cpp  markql_suggestor.h
cli/export/: export_sinks.cpp  export_sinks.h
cli/render/: duckbox_renderer.cpp  duckbox_renderer.h  query_template_renderer.cpp  query_template_renderer.h
cli/repl/: config.cpp  config.h  plugin_manager.cpp  plugin_manager.h
cli/repl/commands/: registry.h  (+33 more)
cli/ui/: color.cpp  color.h
core/src/: ast.h  executor.cpp  executor.h  html_parser.cpp  html_parser.h  khmer_number.cpp  query_parser.cpp  query_parser.h  version.cpp  xsql.cpp
desktop/: Cargo.toml  build.rs  tauri.conf.json
desktop/icons/: README.md
desktop/src/: agent.rs  config.rs  logging.rs  main.rs
desktop/ui/: app.js  index.html  style.css
docs/: README.md  _config.yml  editor-support-plan.md  formal-verification-plan.md  formal-verification-progress.md  generate_diagrams.py  implementation-guide.md  index.md  markql-book.md  markql-cli-guide.md  markql-deep-dive.md  markql-helper-design.md  markql-helper-evaluation.md  markql-helper-runtime-contracts.md  markql-tutorial.md  verify_examples.sh  vim-plugin.md  vscode-extension.md  xsql-cli-guide.md  xsql-tutorial.md
docs/adr/: 0009-spec-first-markql-cpp-refactor.md
docs/book/: SUMMARY.md  appendix-function-reference.md  appendix-grammar.md  appendix-operator-reference.md  ch01-why-markql.md  ch02-mental-model.md  ch03-first-query-loop.md  ch04-sources-and-loading.md  ch05-row-filtering-where.md  ch06-axes-and-exists.md  ch06-structural-row-filtering-exists.md  ch07-value-extraction-text-attr.md  ch08-flatten.md  ch09-project.md  ch10-null-and-stability.md  ch11-output-and-export.md  ch12-troubleshooting.md
docs/case-studies/: README.md  ecommerce-showcase-walkthrough.md  field-hunting-playbook.md  github-contributions-calendar.md
docs/exercises/: README.md
docs/fixtures/: basic.html  products.html
docs/grammar/: MarkQLLexer.g4  MarkQLParser.g4
docs/man/: markql.1
docs/notes/: airline-sql-debugging-mental-model-draft.md  markql-refactor-phase-1-decision-ledger.md  select-self-grounding.md
editors/vim/: README.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  SUPPORT.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
formal/lean/: MarkQLCore.lean  README.md  lakefile.lean
plugins/: registry.json
plugins/cmake/khmer_segmenter/: CMakeLists.txt  markql_khmer_plugin.cpp  xsql_khmer_plugin.cpp
plugins/cmake/number_to_khmer/: CMakeLists.txt  markql_number_to_khmer_plugin.cpp
python/markql/: __init__.py  _core.cpp  _loader.py  _meta.py  _render_cli.py  _types.py  rendering.py
python/tests/: conftest.py  test_alias_and_join.py  test_api.py  test_diagnostics_and_version.py  test_execution.py  test_helper.py  test_language_features.py  test_loading_and_security.py  test_rendering.py
python/xsql/: __init__.py  _core.cpp  _meta.py  _types.py
python/xsql.egg-info/: PKG-INFO  SOURCES.txt
scripts/: README.md  package_appimage.sh  package_deb.sh  run_formal_conformance.sh  run_helper_eval.py  show_logo.sh  uninstall_markql.sh  verify_markql_rename.sh
scripts/agent/: start-agent.sh
scripts/cli/: markqli.sh
scripts/engine_adapters/: cli_json_adapter.sh
scripts/format/: check_cpp_format.sh  format_cpp.sh
scripts/install/: install_markql.sh  uninstall_markql.sh
scripts/maintenance/: check_loc.py  verify_markql_rename.sh
scripts/package/: package_appimage.sh  package_deb.sh
scripts/python/: install.sh  test.sh
scripts/test/: ctest.sh
scripts/tools/: run_rust_inspector.sh  show_logo.sh
specs/markql/: 01-grammar.md  02-row-scope-and-selection.md  03-field-extraction.md  04-functions.md  05-diagnostics.md  06-public-api.md  07-non-goals.md  README.md
tests/: MIGRATION.md  README.md  bench_artifacts.cpp  bench_inner_html.cpp  test_artifacts.cpp  test_axes.cpp  test_cli_args.cpp  test_cli_utils.cpp  test_column_names.cpp  test_diagnostics.cpp  test_dom_explorer.cpp  test_duckbox.cpp  test_explore_search.cpp  test_exports.cpp  test_flatten_extract.cpp  test_flatten_text.cpp  test_fragments.cpp  test_functions.cpp  test_guardrails.cpp  test_harness.cpp  test_harness.h  test_helper_core.cpp  test_khmer_number.cpp  test_legacy_frames.cpp  test_lexer_comments.cpp  test_main.cpp  test_malformed_html.cpp  test_markql_suggestor.cpp  test_meta_commands.cpp  test_order_by.cpp  test_predicates.cpp  test_projections.cpp  test_query_basic.cpp  test_query_template_renderer.cpp  test_render.cpp  test_repl.cpp  test_script_runner.cpp  test_self_ref.cpp  test_shorthand.cpp  test_sources_alias.cpp  (+7 more)
tests/docs_regression/: README.md  run_docs_verify.sh
tests/formal_conformance/: core_select_doc_alias_cases.json
tests/integration/: README.md  run_cucumber.sh
tests/unit/: README.md
tools/html_inspector/: Cargo.toml  README.md
tools/markql_migrate_sql_faithful/: main.cpp
(+337 files in other folders)
