[build-system]
requires = ["setuptools>=64.0", "wheel", "pybind11>=2.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxsql"
dynamic = ["version"]
description = "SQL-style querying for static HTML with a deterministic node model."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "BORANN CHANRATHNAK"}]
dependencies = [
  "Jinja2>=3.1,<4",
  "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]

[tool.setuptools.dynamic]
version = {attr = "markql._meta.__version__"}
